update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -16,6 +16,9 @@ Host scrapy.insophia.com
 Host grey.insophia.com
     Port 3024
 
+Host bh.insophia.com
+    Port 3026
+
 Host hg.insophia.com
     User hg
     Port 2022
@@ -37,8 +40,12 @@ Host zofa* ork* buildhost* webdev* erian*
 Host *.mydeco.com
     User dgrana
 
-Host indexer.ec2.*
-    DynamicForward 6666
+Host daniel-desktop*
+    User dan
+    DynamicForward 2600
+    LocalForward 50030 localhost:50030
+    LocalForward 50060 localhost:50060
+    Compression yes
 
 Host szmulewicz.net
     User szmulewi
@@ -60,5 +67,5 @@ Host *.ikatu.net
 
 Host ido
     User ubuntu
-    Hostname ec2-75-101-248-236.compute-1.amazonaws.com
+    Hostname 184.73.182.166
     IdentityFile ~/.ssh/ido.pem
