ssh config updated

--- a/.ssh/config
+++ b/.ssh/config
@@ -42,10 +42,19 @@ Host *.mydeco.com
 
 Host daniel-desktop*
     User dan
-    DynamicForward 2600
+    DynamicForward 9050
     LocalForward 50030 localhost:50030
     LocalForward 50060 localhost:50060
     Compression yes
+
+Host indexer.ec2.*.mydeco.com
+    DynamicForward 9050
+    LocalForward 50030 hadoop:50030
+    LocalForward 50060 hadoop:50060
+    Compression yes
+
+Host admin.ec2.*.mydeco.com
+    DynamicForward 6666
 
 Host szmulewicz.net
     User szmulewi
