--- a/.ssh/config
+++ b/.ssh/config
@@ -19,10 +19,13 @@ Host grey.insophia.com
 Host bh.insophia.com
     Port 3026
 
-Host hg.insophia.com
+Host hg.insophia.com hg2.insophia.com
     User hg
     Port 2022
     Compression yes
+
+Host dev.insophia.com
+    Port 2022
 
 Host hg.scrapy.org
     User hg
