bashrc and ssh conig updated

--- a/.ssh/config
+++ b/.ssh/config
@@ -27,6 +27,9 @@ Host hg.insophia.com hg2.insophia.com
 Host dev.insophia.com
     Port 2022
 
+Host dev2.insophia.com
+    Port 2222
+
 Host hg.scrapy.org
     User hg
     Port 2222
