add intranet host and filetype to xml on vim

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,6 +7,9 @@ Host *
 Host build.insophia.com
     Port 2022
 
+Host intranet.insophia.com
+    Port 2022
+
 Host webdev.insophia.com
     Port 3022
 
@@ -19,7 +22,7 @@ Host grey.insophia.com
 Host bh.insophia.com
     Port 3026
 
-Host hg.insophia.com hg2.insophia.com
+Host hg.insophia.com
     User hg
     Port 2022
     Compression yes
