--- a/.hgrc
+++ b/.hgrc
@@ -15,6 +15,7 @@ hgext.purge =
 hgext.parentrevspec =
 hgext.bookmarks =
 hgext.graphlog =
+hgext.transplant =
 hgpaste = ~/.hgext/paste.py
 hggit =
 #hgext.hg-git = /home/dan/src/git/hg-git
