--- a/.ssh/config
+++ b/.ssh/config
@@ -56,14 +56,11 @@ Host daniel-desktop*
     LocalForward 50060 localhost:50060
     Compression yes
 
-Host indexer.ec2.*.mydeco.com
-    DynamicForward 9050
-    LocalForward 50030 hadoop:50030
-    LocalForward 50060 hadoop:50060
-    Compression yes
-
-Host admin.ec2.*.mydeco.com
+Host admin.ec2.eu.mydeco.com
     DynamicForward 6666
+
+Host admin.ec2.us.mydeco.com
+    DynamicForward 6667
 
 Host szmulewicz.net
     User szmulewi
