--- a/.screenrc
+++ b/.screenrc
@@ -43,10 +43,10 @@ startup_message off
 bell "bell: %n (%t) [%w:%s]^G"
 vbell on
 vbell_msg "   Wuff  ----  Wuff!!  "
-#termcapinfo xterm|xterms|xterm-color|screen|xs|rxvt ti@:te@
 
-#term screen-256color
-#term rxvt-unicode
+# use faint ansi color instead of underline
+termcapinfo * us=\E[2m
+
 defscrollback 2000
 nonblock on
 defutf8 on
