--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,15 @@ Host *
     StrictHostKeyChecking no
     ServerAliveInterval 60
 
+Host *.insophia.com *.scrapinghub.com
+    User daniel
+
+Host *.mydeco.com
+    User dgrana
+
+Host *.ikatu.net
+    User root
+
 Host build.insophia.com
     Port 2022
 
@@ -22,13 +31,13 @@ Host grey.insophia.com
 Host bh.insophia.com
     Port 3026
 
+Host dev.insophia.com
+    Port 3027
+
 Host hg.insophia.com
     User hg
     Port 2022
     Compression yes
-
-Host dev.insophia.com
-    Port 3027
 
 Host hg.scrapy.org
     User hg
@@ -39,19 +48,8 @@ Host bitbucket.org
     User hg
     Compression yes
 
-Host zofa* ork* buildhost* webdev* erian*
-    User daniel
-
-# mydeco-dev
-Host *.mydeco.com
-    User dgrana
-
 Host daniel-desktop*
     User dan
-    DynamicForward 9050
-    LocalForward 50030 localhost:50030
-    LocalForward 50060 localhost:50060
-    Compression yes
 
 Host szmulewicz.net
     User szmulewi
@@ -62,14 +60,8 @@ Host voipservers.com.ar
 Host 192.168.8.254 dangra.dnsalias.com
     User root
 
-Host triosko triosko.vpn
+Host triosko triosko.vpn daniel-kiosk*
     User dan
-
-Host *.insophia.com
-    User daniel
-
-Host *.ikatu.net
-    User root
 
 Host ido
     User ubuntu
