scrapinghub user, vim filetypes tweaks, handle bootstrap github redirection

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,7 +4,7 @@ Host *
     StrictHostKeyChecking no
     ServerAliveInterval 60
 
-Host *.insophia.com *.scrapinghub.com
+Host *.amazonaws.com
     User daniel
 
 Host *.mydeco.com
@@ -38,6 +38,9 @@ Host hg.insophia.com
     User hg
     Port 2022
     Compression yes
+
+Host *.insophia.com *.scrapinghub.com
+    User daniel
 
 Host hg.scrapy.org
     User hg
