finally commit ControlMaster ssh option

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,8 @@ Host *
     ForwardAgent   yes
     StrictHostKeyChecking no
     ServerAliveInterval 60
+    ControlMaster auto
+    ControlPath ~/.ssh/mux_%h_%p_%r
 
 Host *.amazonaws.com
     User daniel
@@ -34,6 +36,9 @@ Host bh.insophia.com
 Host dev.insophia.com
     Port 3027
 
+Host dev64.insophia.com
+    Port 3031
+
 Host hg.insophia.com
     User hg
     Port 2022
@@ -41,6 +46,9 @@ Host hg.insophia.com
 
 Host *.insophia.com *.scrapinghub.com
     User daniel
+
+#Host web1.scrapinghub.com
+#    LocalForward 28989 localhost:8989
 
 Host hg.scrapy.org
     User hg
