trust vboxsf group to share hg repos across virtualbox shared folders

--- a/.hgrc
+++ b/.hgrc
@@ -45,3 +45,6 @@ ipastepy = ipaste --stdin --syntax python
 #log = --limit 10
 addremove = --similarity 100
 paste = --dest lodgeit
+
+[trusted]
+groups = vboxsf
