--- a/.pylintrc
+++ b/.pylintrc
@@ -128,8 +128,9 @@ zope=yes
 
 # List of members which are usually get through zope's acquisition mecanism and
 # so shouldn't trigger E0201 when accessed (need zope=yes to be considered).
-generated-members=REQUEST,acl_users,aq_parent,validateInvariants,callWhenRunning,addSystemEventTrigger,blockingCallFromThread,callFromThread,callLater,spawnProcess,listenTCP,getPage,run,stop,running,SIGBREAK,SIGUSR1,SIGUSR2
+generated-members=REQUEST,acl_users,aq_parent,validateInvariants,callWhenRunning,addSystemEventTrigger,blockingCallFromThread,callFromThread,callLater,spawnProcess,listenTCP,getPage,run,stop,running,SIGBREAK,SIGUSR1,SIGUSR2,objects,_meta,DoesNotExist
 
+ignored-classes=SplitResult
 
 # checks for :
 # * doc strings
