--- a/.ssh/config
+++ b/.ssh/config
@@ -6,6 +6,9 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/mux_%h_%p_%r
 
+Host *dia-style.com
+    user dgrana
+
 Host *.amazonaws.com
     User daniel
 
