--- a/.pylintrc
+++ b/.pylintrc
@@ -130,7 +130,7 @@ zope=yes
 # so shouldn't trigger E0201 when accessed (need zope=yes to be considered).
 generated-members=REQUEST,acl_users,aq_parent,validateInvariants,callWhenRunning,addSystemEventTrigger,blockingCallFromThread,callFromThread,callLater,spawnProcess,listenTCP,getPage,run,stop,running,SIGBREAK,SIGUSR1,SIGUSR2,objects,_meta,DoesNotExist
 
-ignored-classes=SplitResult
+ignored-classes=SplitResult,ParseResult
 
 # checks for :
 # * doc strings
