move of insophia.com to scrapinghub.com

--- a/.ssh/config
+++ b/.ssh/config
@@ -47,6 +47,10 @@ Host hg.insophia.com
     Port 2022
     Compression yes
 
+Host hg.scrapinghub.com
+    User hg
+    Compression yes
+
 Host *.insophia.com *.scrapinghub.com
     User daniel
 
