--- a/.hgrc
+++ b/.hgrc
@@ -38,7 +38,7 @@ attend = diff,status,log,qdiff,blame,annotate,pdiff,glog
 qstatus = status --rev -2:.
 untrack = rm -Af
 mpaste = paste --dest pastebin.dixo.net --url "https://dev.mydeco.com/pastebin/" --usenetrc
-ipaste = paste --dest lodgeit --url "https://paste.insophia.com" --usenetrc
+ipaste = paste --dest lodgeit --url "https://paste.scrapinghub.com" --usenetrc
 ipastepy = ipaste --stdin --syntax python
 
 [defaults]
