fake hg.insophia.com pointing it to hg.scrapinghub.com

--- a/.ssh/config
+++ b/.ssh/config
@@ -18,23 +18,14 @@ Host *.mydeco.com
 Host *.ikatu.net
     User root
 
-Host build.insophia.com
-    Port 2022
-
 Host intranet.insophia.com
     Port 2022
-
-Host webdev.insophia.com
-    Port 3022
 
 Host scrapy.insophia.com
     Port 3023
 
 Host grey.insophia.com
     Port 3024
-
-Host bh.insophia.com
-    Port 3026
 
 Host dev.insophia.com
     Port 3027
@@ -43,8 +34,8 @@ Host dev64.insophia.com
     Port 3031
 
 Host hg.insophia.com
+    Hostname hg.scrapinghub.com
     User hg
-    Port 2022
     Compression yes
 
 Host hg.scrapinghub.com
