--- a/.ssh/config
+++ b/.ssh/config
@@ -6,14 +6,12 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/mux_%h_%p_%r
 
-Host *dia-style.com
+Host dev.dia-style.com
+    hostname 46.4.33.196
     user dgrana
 
 Host *.amazonaws.com
     User daniel
-
-Host *.mydeco.com
-    User dgrana
 
 Host *.ikatu.net
     User root
@@ -76,3 +74,6 @@ Host ido
     User ubuntu
     Hostname 184.72.220.184
     IdentityFile ~/.ssh/ido.pem
+
+Host sh-host
+    user dan
