--- a/.msmtprc
+++ b/.msmtprc
@@ -1,15 +1,18 @@
 defaults
 logfile ~/.msmtp.log
+tls on
+tls_trust_file /etc/pki/tls/certs/ca-bundle.crt
 
 # gmail
 account gmail
 host smtp.gmail.com
-user dangra@gmail.com
+port 587
+from dangra@gmail.com
 auth on
-tls on
+user dangra@gmail.com
+passwordeval cat ~/.msmtpsecret
 tls_starttls on
 tls_certcheck on
-tls_trust_file /etc/ssl/certs/ca-certificates.crt
 from dangra@gmail.com
 
 account default : gmail
