ignore all dynips

--- a/.ssh/config
+++ b/.ssh/config
@@ -35,6 +35,8 @@ Host sh-host
     user dan
 
 Host ca
-    UserKnownHostsFile /dev/null
     Hostname cilan.sytes.net
     Port 888
+
+Host *.sytes.net
+    UserKnownHostsFile /dev/null
