ssh config updates

--- a/.ssh/config
+++ b/.ssh/config
@@ -26,10 +26,12 @@ Host bitbucket.org
 Host 192.168.8.254 dangra.dnsalias.com
     User root
 
-Host ido
+Host *.bitehunter.com
     User ubuntu
-    Hostname 184.72.220.184
     IdentityFile ~/.ssh/ido.pem
+
+Host disco.bitehunter.com
+    Hostname ec2-23-22-221-13.compute-1.amazonaws.com
 
 Host sh-host
     user dan
@@ -40,3 +42,7 @@ Host ca
 
 Host *.sytes.net
     UserKnownHostsFile /dev/null
+
+Host multiservicesrl.no-ip.org
+    User root
+    Port 2002
