--- a/.ssh/config
+++ b/.ssh/config
@@ -46,3 +46,19 @@ Host *.sytes.net
 Host multiservicesrl.no-ip.org
     User root
     Port 2002
+
+# Vagrant
+Host vagrant*
+    HostName 127.0.0.1
+    User vagrant
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    PasswordAuthentication no
+    IdentityFile /home/daniel/.vagrant.d/insecure_private_key
+    IdentitiesOnly yes
+
+Host vagrant-hubstorage
+    Port 2201
+
+Host vagrant-panelbot
+    Port 2200
