--- a/.ssh/config
+++ b/.ssh/config
@@ -54,7 +54,8 @@ Host vagrant*
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
     PasswordAuthentication no
-    IdentityFile /home/daniel/.vagrant.d/insecure_private_key
+    IdentityFile ~/.vagrant.d/insecure_private_key
+    IdentityFile ~/.ssh/id_rsa
     IdentitiesOnly yes
 
 Host vagrant-hubstorage
