--- a/.vagrant.d/Vagrantfile
+++ b/.vagrant.d/Vagrantfile
@@ -1,4 +1,4 @@
 # vim:ft=ruby
 Vagrant::Config.run do |config|
-  config.vm.provision :shell, :path => '~/.vagrant.d/default.sh'
+  #config.vm.provision :shell, :path => '~/.vagrant.d/default.sh'
 end
