--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
 	#func = magenta  # not supported by git <1.6
 	meta = yellow
 [core]
-	excludesfile = /home/dan/.cvsignore
+    excludesfile = ~/.cvsignore
 	autocrlf = input
 	safecrlf = true
 [github]
