--- a/.ssh/config
+++ b/.ssh/config
@@ -45,15 +45,6 @@ Host multiservicesrl.no-ip.org
     Port 2002
 
 # Vagrant
-Host vagrant*
-    HostName 127.0.0.1
-    User vagrant
-    UserKnownHostsFile /dev/null
-    StrictHostKeyChecking no
-    PasswordAuthentication no
-    IdentityFile ~/.vagrant.d/insecure_private_key
-    IdentityFile ~/.ssh/id_rsa
-    IdentitiesOnly yes
 
 Host vagrant-hubstorage
     Port 2201
@@ -63,3 +54,16 @@ Host vagrant-panelbot
 
 Host vagrant-crawlera
     Port 2203
+
+Host vagrant-docker
+    HostName 33.33.33.41
+
+Host vagrant*
+    HostName 127.0.0.1
+    User vagrant
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    PasswordAuthentication no
+    IdentityFile ~/.vagrant.d/insecure_private_key
+    IdentityFile ~/.ssh/id_rsa
+    IdentitiesOnly yes
