vbox 4.2.20 regressed handling ubuntu local dns resolver

--- a/.vagrant.d/Vagrantfile
+++ b/.vagrant.d/Vagrantfile
@@ -1,4 +1,6 @@
 # vim:ft=ruby
-Vagrant::Config.run do |config|
-  #config.vm.provision :shell, :path => '~/.vagrant.d/default.sh'
+Vagrant.configure("2") do |config|
+  config.vm.provider "virtualbox" do |v|
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+  end
 end
