--- a/.ssh/config
+++ b/.ssh/config
@@ -6,6 +6,12 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/mux_%h_%p_%r
 
+Host slugbuilder
+    Hostname 33.33.33.41
+    Port 7422
+    User git
+    IdentityFile ~/.vagrant.d/insecure_private_key
+
 Host *.amazonaws.com
     User daniel
 
