fix sloppy focus setting

--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,6 +1,6 @@
 # vim:ft=dosini:
 [global_config]
-  focus = sloopy
+  focus = sloppy
   handle_size = 1
   window_state = maximise
   borderless = True
