--- a/.ssh/config
+++ b/.ssh/config
@@ -6,7 +6,7 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/mux_%h_%p_%r
 
-Host slugbuilder
+Host slugfactory
     Hostname 33.33.33.41
     Port 7422
     User git
