worst commit message ever

--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,11 +1,13 @@
 ; vim:ft=dosini:
 [redshift]
-temp-day=5700
-temp-night=3700
-transition=1
-gamma=0.8:0.7:0.8
 location-provider=manual
+transition=1
+;gamma=0.8:0.7:0.8
+;temp-day=5700
+;brightness-day=1.0
+;temp-night=3700
+;brightness-night=1.0
 
 [manual]
-lat=-34.6648
-lon=-54.1667
+lat=-34.65
+lon=-54.17
