--- a/.ssh/config
+++ b/.ssh/config
@@ -12,6 +12,12 @@ Host slugfactory
     User git
     IdentityFile ~/.vagrant.d/insecure_private_key
 
+Host scrapinghub
+	Hostname disco1.eu.scrapinghub.com
+    Port 7422
+    User git
+    IdentityFile ~/.vagrant.d/insecure_private_key
+
 Host *.amazonaws.com
     User daniel
 
@@ -52,20 +58,16 @@ Host multiservicesrl.no-ip.org
 
 # Vagrant
 
-Host vagrant-hubstorage
-    Port 2201
-
 Host vagrant-panelbot
-    Port 2200
+    HostName 33.33.33.10
 
-Host vagrant-crawlera
-    Port 2203
+Host vagrant-hubstorage
+    HostName 33.33.33.11
 
 Host vagrant-docker
     HostName 33.33.33.41
 
 Host vagrant*
-    HostName 127.0.0.1
     User vagrant
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
