update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,10 +4,17 @@ Host *
     StrictHostKeyChecking no
     ServerAliveInterval 60
     ControlMaster auto
-    ControlPath ~/.ssh/mux_%h_%p_%r
+    ControlPath ~/.ssh/z-%r@%h:%p
+    ControlPersist 30
 
 Host slugfactory
-    Hostname 33.33.33.41
+    Hostname 33.33.33.51
+    Port 7422
+    User git
+    IdentityFile ~/.vagrant.d/insecure_private_key
+
+Host frankie-demo
+    Hostname 88.198.113.158
     Port 7422
     User git
     IdentityFile ~/.vagrant.d/insecure_private_key
@@ -66,6 +73,10 @@ Host vagrant-hubstorage
 
 Host vagrant-docker
     HostName 33.33.33.41
+
+
+Host vagrant-frankie
+    Hostname 33.33.33.51
 
 Host vagrant*
     User vagrant
