--- a/.ssh/config
+++ b/.ssh/config
@@ -7,6 +7,12 @@ Host *
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
 
+    # https://stribika.github.io/2015/01/04/secure-secure-shell.html
+    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
+    Ciphers chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+
+
 Host slugfactory
     Hostname 33.33.33.51
     Port 7422
