relax ssh key exchange

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,11 +7,12 @@ Host *
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
 
-    # https://stribika.github.io/2015/01/04/secure-secure-shell.html
-    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
-    Ciphers chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
-
+# openwrt
+Host openwrt
+    User root
+    KexAlgorithms diffie-hellman-group1-sha1
+    Ciphers aes256-ctr
+    MACs hmac-sha1
 
 Host slugfactory
     Hostname 33.33.33.51
@@ -83,6 +84,7 @@ Host vagrant-docker
 
 Host vagrant-frankie
     Hostname 33.33.33.51
+    IdentityFile ~/src/frankie/.vagrant/machines/frankie/virtualbox/private_key
 
 Host vagrant*
     User vagrant
@@ -92,3 +94,12 @@ Host vagrant*
     IdentityFile ~/.vagrant.d/insecure_private_key
     IdentityFile ~/.ssh/id_rsa
     IdentitiesOnly yes
+
+# For some reason this must be the last section or it is not possible to override it
+Host *
+    # https://stribika.github.io/2015/01/04/secure-secure-shell.html
+    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
+    Ciphers chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+
+
