trim down ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -14,35 +14,7 @@ Host openwrt
     Ciphers aes256-ctr
     MACs hmac-sha1
 
-Host slugfactory
-    Hostname 33.33.33.51
-    Port 7422
-    User git
-    IdentityFile ~/.vagrant.d/insecure_private_key
-
-Host frankie-demo
-    Hostname 88.198.113.158
-    Port 7422
-    User git
-    IdentityFile ~/.vagrant.d/insecure_private_key
-
-Host scrapinghub
-	Hostname disco1.eu.scrapinghub.com
-    Port 7422
-    User git
-    IdentityFile ~/.vagrant.d/insecure_private_key
-
-Host *.amazonaws.com
-    User daniel
-
-Host *.ikatu.net
-    User root
-
-Host hg.scrapinghub.com
-    User hg
-    Compression yes
-
-Host *.insophia.com *.scrapinghub.com
+Host *.scrapinghub.com
     User daniel
 
 Host bitbucket.org
@@ -56,32 +28,7 @@ Host *.bitehunter.com
     User ubuntu
     IdentityFile ~/.ssh/ido.pem
 
-Host sh-host
-    user dan
-
-Host ca
-    Hostname cilan.sytes.net
-    Port 888
-
-Host *.sytes.net
-    UserKnownHostsFile /dev/null
-
-Host multiservicesrl.no-ip.org
-    User root
-    Port 2002
-
 # Vagrant
-
-Host vagrant-panelbot
-    HostName 33.33.33.10
-
-Host vagrant-hubstorage
-    HostName 33.33.33.11
-
-Host vagrant-docker
-    HostName 33.33.33.41
-
-
 Host vagrant-frankie
     Hostname 33.33.33.51
     IdentityFile ~/src/frankie/.vagrant/machines/frankie/virtualbox/private_key
@@ -101,5 +48,3 @@ Host *
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
     Ciphers chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
-
-
