disable ssh roaming

--- a/.ssh/config
+++ b/.ssh/config
@@ -6,6 +6,8 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
+    # https://www.qualys.com/2016/01/14/cve-2016-0777-cve-2016-0778/openssh-cve-2016-0777-cve-2016-0778.txt
+    UseRoaming no
 
 # openwrt
 Host openwrt
