--- a/.gitconfig
+++ b/.gitconfig
@@ -27,3 +27,7 @@
 	smtpserverport = 587
 [push]
 	default = current
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
