--- a/.ssh/config
+++ b/.ssh/config
@@ -7,11 +7,12 @@ Host *
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
     # https://www.qualys.com/2016/01/14/cve-2016-0777-cve-2016-0778/openssh-cve-2016-0777-cve-2016-0778.txt
-    UseRoaming no
+    # UseRoaming no
 
 # openwrt
 Host openwrt
     User root
+    Hostname 192.168.8.1
     KexAlgorithms diffie-hellman-group1-sha1
     Ciphers aes256-ctr
     MACs hmac-sha1
