--- a/.ssh/config
+++ b/.ssh/config
@@ -9,8 +9,8 @@ Host *
     # https://www.qualys.com/2016/01/14/cve-2016-0777-cve-2016-0778/openssh-cve-2016-0777-cve-2016-0778.txt
     # UseRoaming no
 
-# openwrt
-Host openwrt
+# lede
+Host lede
     User root
     Hostname 192.168.8.1
     KexAlgorithms diffie-hellman-group1-sha1
