update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,15 +7,7 @@ Host *
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
     # https://www.qualys.com/2016/01/14/cve-2016-0777-cve-2016-0778/openssh-cve-2016-0777-cve-2016-0778.txt
-    # UseRoaming no
-
-# lede
-Host lede
-    User root
-    Hostname 192.168.8.1
-    KexAlgorithms diffie-hellman-group1-sha1
-    Ciphers aes256-ctr
-    MACs hmac-sha1
+    UseRoaming no
 
 Host *.scrapinghub.com
     User daniel
@@ -24,12 +16,23 @@ Host bitbucket.org
     User hg
     Compression yes
 
-Host 192.168.8.254 dangra.dnsalias.com
-    User root
+Host github.com
+    User git
+    ForwardAgent no
+    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256,diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1
 
-Host *.bitehunter.com
+Host openwrt
+    User root
+    Hostname 192.168.8.1
+    KexAlgorithms diffie-hellman-group1-sha1
+    Ciphers aes256-ctr
+    MACs hmac-sha1
+
+Host HGKafka
+    Hostname 54.218.68.167
+    IdentityFile ~/.ssh/memex-kafka.pem
+    IdentitiesOnly yes
     User ubuntu
-    IdentityFile ~/.ssh/ido.pem
 
 # Vagrant
 Host vagrant-frankie
@@ -45,15 +48,9 @@ Host vagrant*
     IdentityFile ~/.ssh/id_rsa
     IdentitiesOnly yes
 
-Host github.com
-    User git
-    ForwardAgent no
-    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256,diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1
-
 # For some reason this must be the last section or it is not possible to override it
 Host *
     # https://stribika.github.io/2015/01/04/secure-secure-shell.html
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
     Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
-
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
