--- a/.gitconfig
+++ b/.gitconfig
@@ -15,8 +15,8 @@
 	meta = yellow
 [core]
     excludesfile = ~/.cvsignore
-	autocrlf = input
-	safecrlf = true
+    #autocrlf = input
+    #safecrlf = true
 	editor = vim
 [github]
 	user = dangra
@@ -31,3 +31,5 @@
 	clean = git-lfs clean %f
 	smudge = git-lfs smudge %f
 	required = true
+[alias]
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
