--- a/.gitconfig
+++ b/.gitconfig
@@ -33,3 +33,7 @@
 	required = true
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[pull]
+	ff = only
+[init]
+	defaultBranch = master
