--- a/.ssh/config
+++ b/.ssh/config
@@ -11,6 +11,9 @@ Host *.scrapinghub.com
     User daniel
     Port 999
 
+Host cra01-*.scrapinghub.com
+    ProxyJump cra01-he001.scrapinghub.com
+
 Host bitbucket.org
     User hg
     Compression yes
