--- a/.gitconfig
+++ b/.gitconfig
@@ -14,9 +14,9 @@
 	#func = magenta  # not supported by git <1.6
 	meta = yellow
 [core]
-    excludesfile = ~/.cvsignore
-    #autocrlf = input
-    #safecrlf = true
+  excludesfile = ~/.cvsignore
+  #autocrlf = input
+  #s:fecrlf = true
 	editor = vim
 [github]
 	user = dangra
@@ -37,3 +37,6 @@
 	ff = only
 [init]
 	defaultBranch = master
+
+[includeIf "gitdir:~/flinks/"]
+	path = ./.gitconfig-flinks
