--- a/.ssh/config
+++ b/.ssh/config
@@ -6,13 +6,7 @@ Host *
     ControlMaster auto
     ControlPath ~/.ssh/z-%r@%h:%p
     ControlPersist 30
-
-Host *.scrapinghub.com
-    User daniel
-    Port 999
-
-Host cra01-*.scrapinghub.com
-    ProxyJump cra01-he001.scrapinghub.com
+    AddKeysToAgent yes
 
 Host bitbucket.org
     User hg
@@ -30,12 +24,6 @@ Host openwrt
     KexAlgorithms diffie-hellman-group1-sha1
     Ciphers aes256-ctr
     MACs hmac-sha1
-
-Host HGKafka
-    Hostname 54.218.68.167
-    IdentityFile ~/.ssh/memex-kafka.pem
-    IdentitiesOnly yes
-    User ubuntu
 
 # Vagrant
 Host vagrant-frankie
