--- a/.ssh/config
+++ b/.ssh/config
@@ -21,23 +21,27 @@ Host github.com
 Host openwrt
     User root
     Hostname 192.168.8.1
-    KexAlgorithms diffie-hellman-group1-sha1
+    #KexAlgorithms diffie-hellman-group1-sha1
+    #KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group14-sha256,diffie-hellman-group14-sha1
+    PubkeyAcceptedAlgorithms +ssh-rsa
+    HostbasedAcceptedAlgorithms +ssh-rsa
     Ciphers aes256-ctr
     MACs hmac-sha1
+    IdentityFile ~/.ssh/flinks_rsa
 
 # Vagrant
 Host vagrant-frankie
     Hostname 33.33.33.51
     IdentityFile ~/src/frankie/.vagrant/machines/frankie/virtualbox/private_key
 
-Host vagrant*
-    User vagrant
-    UserKnownHostsFile /dev/null
-    StrictHostKeyChecking no
-    PasswordAuthentication no
-    IdentityFile ~/.vagrant.d/insecure_private_key
-    IdentityFile ~/.ssh/id_rsa
-    IdentitiesOnly yes
+# Host vagrant*
+#     User vagrant
+#     UserKnownHostsFile /dev/null
+#     StrictHostKeyChecking no
+#     PasswordAuthentication no
+#     IdentityFile ~/.vagrant.d/insecure_private_key
+#     IdentityFile ~/.ssh/id_rsa
+#     IdentitiesOnly yes
 
 # For some reason this must be the last section or it is not possible to override it
 Host *
