--- a/.gitconfig
+++ b/.gitconfig
@@ -38,5 +38,26 @@
 [init]
 	defaultBranch = master
 
-[includeIf "gitdir:~/flinks/"]
+[includeIf "gitdir:~/src/flinks/"]
 	path = ./.gitconfig-flinks
+
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    features = side-by-side line-numbers decorations Nord
+    whitespace-error-style = 22 reverse
+
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
+
+[fetch]
+	prune = true
