--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -3,16 +3,13 @@ live_config_reload: true
 shell:
   program: /usr/local/bin/bash
   args: [-lc, "exec tmux new"]
-  # - "tmux attach -t S0 || exec tmux new -s S0"
 
 # FF g
 font:
   size: 15.0 #18
   use_thin_strokes: true
   normal:
-    #family: Hack Nerd Font
     family: Inconsolata Nerd Font
-    #family: JetBrainsMonoMedium Nerd Font
 
 draw_bold_text_with_bright_colors: false
 
@@ -35,7 +32,11 @@ key_bindings:
   - { key: J,        mods: Command,       chars: "\x01\x6a" }
   - { key: K,        mods: Command,       chars: "\x01\x6b" }
   - { key: L,        mods: Command,       chars: "\x01\x6c" }
-  - { key: T,        mods: Command,       chars: "\x01\x63" }
+  - { key: H,        mods: Command|Shift, chars: "\x01\x48" }
+  - { key: J,        mods: Command|Shift, chars: "\x01\x4a" }
+  - { key: K,        mods: Command|Shift, chars: "\x01\x4b" }
+  - { key: L,        mods: Command|Shift, chars: "\x01\x4c" }
+  - { key: T,        mods: Command|Shift, chars: "\x01\x63" }
   - { key: RBracket, mods: Command|Shift, chars: "\x01\x6e" }
   - { key: LBracket, mods: Command|Shift, chars: "\x01\x70" }
   - { key: Return,   mods: Command|Shift, chars: "\x01\x7a" }
