--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
 	smtpserverport = 587
 [push]
 	default = current
+	autoSetupRemote = true
 [filter "lfs"]
 	clean = git-lfs clean %f
 	smudge = git-lfs smudge %f
