--- a/.yabairc
+++ b/.yabairc
@@ -16,7 +16,7 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
 # global settings
 yabai -m config mouse_follows_focus          off
-yabai -m config focus_follows_mouse          off
+yabai -m config focus_follows_mouse          autofocus
 yabai -m config window_origin_display        default
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               off
@@ -44,5 +44,9 @@ yabai -m config bottom_padding               3
 yabai -m config left_padding                 3
 yabai -m config right_padding                3
 yabai -m config window_gap                   06
+
+# Special window treatment
+yabai -m rule --add app='^GIMP' title!='(^GNU|GIMP$)' manage=off
+yabai -m rule --add app='^System Preferences$' manage=off
 
 echo "yabai configuration loaded.."
