--- a/.ssh/config
+++ b/.ssh/config
@@ -29,24 +29,15 @@ Host openwrt
     MACs hmac-sha1
     IdentityFile ~/.ssh/flinks_rsa
 
-# Vagrant
-Host vagrant-frankie
-    Hostname 33.33.33.51
-    IdentityFile ~/src/frankie/.vagrant/machines/frankie/virtualbox/private_key
-
-# Host vagrant*
-#     User vagrant
-#     UserKnownHostsFile /dev/null
-#     StrictHostKeyChecking no
-#     PasswordAuthentication no
-#     IdentityFile ~/.vagrant.d/insecure_private_key
-#     IdentityFile ~/.ssh/id_rsa
-#     IdentitiesOnly yes
-
 # For some reason this must be the last section or it is not possible to override it
 Host *
     # https://stribika.github.io/2015/01/04/secure-secure-shell.html
+    PubkeyAuthentication yes
+    HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
     Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
     UseRoaming no
+    #PasswordAuthentication no
+    #ChallengeResponseAuthentication no
+
