--- a/.gitmodules
+++ b/.gitmodules
@@ -40,11 +40,9 @@
 [submodule ".vim/pack/plugins/sources/gist-vim"]
 	path = .vim/pack/plugins/sources/gist-vim
 	url = https://github.com/mattn/gist-vim.git
-	branch = 4a21031
 [submodule ".vim/pack/plugins/sources/webapi-vim"]
 	path = .vim/pack/plugins/sources/webapi-vim
 	url = https://github.com/mattn/webapi-vim.git
-	branch = 6f5ffb6
 [submodule ".vim/pack/plugins/sources/vim-pathogen"]
 	path = .vim/pack/plugins/sources/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
@@ -90,7 +88,6 @@
 [submodule ".vim/pack/plugins/sources/coc.nvim"]
 	path = .vim/pack/plugins/sources/coc.nvim
 	url = https://github.com/neoclide/coc.nvim
-	branch = origin/release
 [submodule ".vim/pack/plugins/sources/gruvbox"]
 	path = .vim/pack/plugins/sources/gruvbox
 	url = https://github.com/morhetz/gruvbox
@@ -124,4 +121,6 @@
 [submodule ".vim/pack/plugins/sources/vim-toml"]
 	path = .vim/pack/plugins/sources/vim-toml
 	url = https://github.com/cespare/vim-toml
-	branch = origin/main
+[submodule ".vim/pack/plugins/sources/vim-elixir"]
+	path = .vim/pack/plugins/sources/vim-elixir
+	url = https://github.com/elixir-editors/vim-elixir
