tmux color fixes

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -35,8 +35,9 @@ set -g display-panes-time 2000
 set -g display-time 4000
 
 # {n}vim compability
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -as terminal-features ",alacritty*:RGB"
+set-option -as terminal-overrides ",xterm-256color*:Tc"
 
 # Split horiziontal and vertical splits, instead of % and ". We also open them
 # in the same directory.  Because we use widescreens nowadays, opening a
