--- a/.ssh/config
+++ b/.ssh/config
@@ -8,9 +8,9 @@ Host *
     ControlPersist 30
     AddKeysToAgent yes
 
-Host bitbucket.org
-    User hg
-    Compression yes
+Host aur.archlinux.org
+  IdentityFile ~/.ssh/aur
+  User aur
 
 Host github.com
     User git
